# Discord-Bot-Taverneira

./: .env  LICENSE  README.md  keep_alive.py  main.py  pyproject.toml
cogs/: Dev.py  GeradorPersonagem.py  Musica.py  TavernaPlanar.py  musica.py  utilitarios.py
databases/: jogadores.py  personagem.py  urls.py
